--- a/test/style.css
+++ b/test/style.css
@@ -1,7 +1,13 @@
-body {
+body > div {
   display: table;
   width: 100%;
   height: 100%;
+}
+
+nav ul {
+  display: table;
+  height: 100px;
+  width: 100%;
 }
 
 aside {
@@ -17,8 +23,19 @@ section {
 }
 
 li {
-  height: 50px;
   border: 1px solid blue;
+}
+
+nav li {
+  display: table-cell;
+}
+
+aside li {
+  height: 50px;
+}
+
+section li {
+  height: 100px;
 }
 
 * {
